chore: made some changes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "techinovertest",
+  "name": "kest-task",
   "version": "1.0.0",
   "description": "Drones API",
   "main": "index.js",
